@@ -3,8 +3,11 @@ snowplow-utils 0.16.2 (2024-02-XX)
 ## Summary
 XXX
 
-## Fixes
+## Features
 - Add new `parse_agg_dict` macro for use to generate aggregation sql in other packages
+- Overwrite default dbt `apply_grants` macro to enable using a variable to define grant targets
+- Add new `grant_usage_on_schemas_where_select` macro to add as a post-hook in package to grant usage for schemas
+
 
 ## Upgrading
 To upgrade, bump the package version in your `packages.yml` file.
